Fixed close button, found a bug on mobile moving pictures to the left

--- a/style.css
+++ b/style.css
@@ -365,10 +365,15 @@ button.loading {
 }
 
 .close-btn {
-  float: right;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   font-size: 2rem;
   cursor: pointer;
   color: #c49b66;
+  background: none;
+  border: none;
+  z-index: 10;
 }
 
 .close-btn:hover {
